--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <h2 class="h3 mb-3">Professional Skills</h2>
     <div class="row">
       <div class="col-md-6">
-        <div class="mb-2"><span>HTML</span>
+        <div class="mb-2"><span>Android</span>
           <div class="progress my-1">
             <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="100" data-aos-anchor=".skills-section" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
           </div>
