correction in name and info  update

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Right Resume</title>
+    <title>Sudipta Resume</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="crossorigin"/>
     <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&amp;family=Roboto:wght@300;400;500;700&amp;display=swap"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&amp;family=Roboto:wght@300;400;500;700&amp;display=swap" media="print" onload="this.media='all'"/>
@@ -55,8 +55,8 @@
         <div class="avatar hover-effect bg-white shadow-sm p-1"><img src="images/sudipto.JPEG" width="200" height="200"/></div>
       </div>
       <div class="col-lg-8 col-md-7 text-center text-md-start">
-        <h2 class="h1 mt-2" data-aos="fade-left" data-aos-delay="0">Joyce Harrison</h2>
-        <p data-aos="fade-left" data-aos-delay="100">Graphic Designer & Web Developer</p>
+        <h2 class="h1 mt-2" data-aos="fade-left" data-aos-delay="0">Sudipta Bhattacharya</h2>
+        <p data-aos="fade-left" data-aos-delay="100">Android Developer</p>
         <div class="d-print-none" data-aos="fade-left" data-aos-delay="200"><a class="btn btn-light text-dark shadow-sm mt-1 me-1" href="right-resume.pdf" target="_blank">Download CV</a><a class="btn btn-success shadow-sm mt-1" href="#contact">Hire Me</a></div>
       </div>
     </div>
@@ -65,7 +65,7 @@
     <div class="row">
       <div class="col-md-6">
         <h2 class="h3 mb-3">About Me</h2>
-        <p>Hello! I’m Joyce Harrison. I am passionate about UI/UX design and Web Design. I am a skilled Front-end Developer and master of Graphic Design tools such as Photoshop and Sketch.</p>
+        <p>Hello! I’m Sudipta Bhattacharya. I am passionate about UI/UX design and Web Design. I am a skilled Front-end Developer and master of Graphic Design tools such as Photoshop and Sketch.</p>
       </div>
       <div class="col-md-5 offset-md-1">
         <div class="row mt-2">
@@ -79,19 +79,19 @@
             <div class="pb-1">Email</div>
           </div>
           <div class="col-sm-8">
-            <div class="pb-1 text-secondary">Joyce@company.com</div>
+            <div class="pb-1 text-secondary">sbhattacharya939@gmail.com</div>
           </div>
           <div class="col-sm-4">
             <div class="pb-1">Phone</div>
           </div>
           <div class="col-sm-8">
-            <div class="pb-1 text-secondary">+0718-111-0011</div>
+            <div class="pb-1 text-secondary">+919674436305/8240779309</div>
           </div>
           <div class="col-sm-4">
             <div class="pb-1">Address</div>
           </div>
           <div class="col-sm-8">
-            <div class="pb-1 text-secondary">140, City Center, New York, U.S.A</div>
+            <div class="pb-1 text-secondary">9/13 Chanditala Lane, Kolkata - 700040</div>
           </div>
         </div>
       </div>
@@ -102,14 +102,9 @@
     <h2 class="h3 mb-3">Professional Skills</h2>
     <div class="row">
       <div class="col-md-6">
-        <div class="mb-2"><span>Android</span>
+        <div class="mb-2"><span>Android Developer</span>
           <div class="progress my-1">
             <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="100" data-aos-anchor=".skills-section" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-          </div>
-        </div>
-        <div class="mb-2"><span>CSS</span>
-          <div class="progress my-1">
-            <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="200" data-aos-anchor=".skills-section" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
           </div>
         </div>
         <div class="mb-2"><span>JavaScript</span>
